--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/IMG_20210109_180056_053.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Thushamini Chathushika</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="github"><i class="bx bxl-github"></i></a>
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/IMG-20200922-WA0035.jpg" class="img-fluid" alt="">
+            <img src="assets/img/IMG_20210109_180056_053.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI/UX Designer &amp; Software Developer.</h3>
