--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/IMG_20210109_180056_053.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/2021-02-18-19-30-41-014.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Thushamini Chathushika</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="github"><i class="bx bxl-github"></i></a>
@@ -84,7 +84,7 @@
             <h3>UI/UX Designer &amp; Software Developer.</h3>
             <p class="fst-italic">
               I am looking forward to learn and gain from my experience at work and use all of my abilities and
-skills to contribute towards company goals and growth
+              skills to contribute towards company goals and growth
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -361,7 +361,7 @@ skills to contribute towards company goals and growth
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>thushaminic@mail.com</p>
+                <p>thushaminic@gmail.com</p>
               </div>
 
               <div class="phone">
