--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <img src="assets/img/2021-02-18-19-30-41-014.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Thushamini Chathushika</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/chathushika2000" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/chathu_stewart/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/thushamini-chathushika-0146a71a7/" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -407,7 +408,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="#" method="POST" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xnqlpkpw" method="POST" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -415,7 +416,7 @@
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                  <input type="email" class="form-control" name="_replyto" id="email" required>
                 </div>
               </div>
               <div class="form-group">
@@ -425,11 +426,6 @@
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
@@ -457,7 +453,6 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
